--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 	<meta charset="gb2312">
-	<title>爱你</title>
+	<title>爱</title>
 </hrad>
 <body>
 	<h1  style="text-align: center;">臻宇</h1>
