--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Insert title here</title>
 </head>
 <body bgcolor=cyan><font size =3>
-	<form action="people.jsp" method=get name =fome>
+	<form action="people.html" method=get name =fome>
 	请输入姓名：<input type="text" name ="name">
 	<br><input type ="submit" value ="送出"name=submit>
 	</form>
